--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ li a:hover {
   padding-left: 5%;
 }
 .button {
+  font-family: 'Amatic SC', cursive;
   padding: 15px 25px;
-  font-size: 24px;
+  font-size: 50px;
   text-align: center;
   cursor: pointer;
   outline: none;
@@ -46,13 +47,13 @@ li a:hover {
   background-color: #4CAF50;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 7px #999;
 }
 
 .button:hover {background-color: #3e8e41}
 
 .button:active {
   background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  box-shadow: 0 3px #666;
   transform: translateY(4px);
 }
